force-app/main/default/objects/Proposal__c/Proposal__c.object-meta.xml
<CustomObject>
    <label>Giải Pháp Kỹ Thuật</label>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Giải Pháp Kỹ Thuật</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>