force-app/main/default/objects/Proposal__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>