force-app/main/default/objects/Proposal__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Proposals (Approved By)</relationshipLabel>
    <relationshipName>ApprovedProposal</relationshipName>
    <type>Lookup</type>
</CustomField>