force-app/main/default/objects/Proposal__c/fields/Feedback_Details__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Details__c</fullName>
    <label>Feedback Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>