force-app/main/default/objects/Proposal__c/fields/General_CV_Comment__c.field-meta.xml
<CustomField>
    <fullName>General_CV_Comment__c</fullName>
    <label>General CV Comment</label>
    <type>TextArea</type>
</CustomField>