force-app/main/default/objects/Proposal__c/fields/Proposal_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Document_URL__c</fullName>
    <label>Proposal Document URL</label>
    <type>Url</type>
</CustomField>